# Neptunes-Hooks

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  settings.schema.yaml
.github/workflows/: code-analysis.yaml  code-analysis.yml
Hooks/: __init__.py  __main__.py  common.py  config.py  discord.py  neptunes_pride_api.py  teams.py  teams_api.py
Teams/: Config.py  __init__.py  __main__.py
neptunes_hooks/: __init__.py  __main__.py  common.py  config.py  console.py  discord.py  discord_api.py  microsoft_teams_api.py  models.py  neptunes_pride_api.py  settings.py  teams.py  teams_api.py  utils.py
neptunes_hooks/services/: _base.py  microsoft_teams.py  neptunes_pride.py
