[tool.poetry]
name = "Neptunes-Hooks"
version = "2.2.1"
description = "A simple app that sends Neptune's Pride Stats to webhooks."
license = "GPL-3.0-or-later"
authors = ["Buried-In-Code <BuriedInCode@tuta.io>"]
maintainers = ["Buried-In-Code <BuriedInCode@tuta.io>"]
readme = "README.md"
repository = "https://github.com/Buried-In-Code/Neptunes-Hooks"
packages = [
	{ include = "neptunes_hooks" }
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Natural Language :: English",
	"Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
	"Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
"ruamel.yaml" = "^0.17.17"
yamale = "^4.0.4"
rich = "^10.15.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
Neptunes-Hooks = 'neptunes_hooks.__main__:main'

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Buried-In-Code/Neptunes-Hooks/issues"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = []
