[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "BuriedInCode@tuta.io", name = "BuriedInCode"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Typing :: Typed"
]
dependencies = [
  "pydantic >= 1.10.7",
  "ratelimit >= 2.2.1",
  "requests >= 2.26.0",
  "rich >= 10.15.2",
  "tomli >= 2.0.1; python_version < \"3.11\"",
  "tomli-w >= 1.0.0"
]
description = "A simple app that sends Neptune's Pride Stats to webhooks."
dynamic = ["version"]
keywords = []
license = "GPL-3.0-or-later"
name = "Neptunes-Hooks"
readme = "README.md"
requires-python = ">= 3.7"

[project.optional-dependencies]
dev = [
  "pre-commit >= 2.16.0"
]

[project.scripts]
Neptunes-Hooks = 'neptunes_hooks.__main__:main'

[project.urls]
Documentation = "https://github.com/Buried-In-Code/Neptunes-Hooks#readme"
Issues = "https://github.com/Buried-In-Code/Neptunes-Hooks/issues"
Source = "https://github.com/Buried-In-Code/Neptunes-Hooks"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py37", "py38", "py39"]

[tool.hatch.version]
path = "neptunes_hooks/__init__.py"

[tool.ruff]
fix = true
format = "grouped"
ignore = [
  "A001",
  "A003",
  "ANN101",
  "ANN102",
  "ANN204",
  "ANN206",
  "ANN401",
  "C901",
  "D107",
  "D212",
  "RET504",
  "SIM105"
]
line-length = 100
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C40",
  "C90",
  "COM",
  # "D",
  "DJ",
  "E",
  "ERA",
  "F",
  "G",
  "I",
  "ICN",
  "INP",
  "ISC",
  "N",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PLC",
  "PLE",
  "PLW",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TCH",
  "TID",
  "UP",
  "W",
  "YTT"
]
show-fixes = true
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 18
